--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+<html lang="en-us">
 
-  {%- include head.html -%}
+  {% include head.html %}
 
   <body>
 
-    <main aria-label="Content">
-      <div>
-        {{ content }}
-      </div>
-    </main>
+    {% include sidebar.html %}
 
-    {%- include footer.html -%}
+    <div class="content container">
+      {{ content }}
+    </div>
 
   </body>
-
 </html>
