--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
 
     <div class="content container">
       {{ content }}
+
+      <p class="footer">&copy; {{ site.time | date: '%Y' }}. Todos los derechos reservados.</p>
+
     </div>
 
     <script>
