--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@ layout: default
   <iframe id="audio_{{page.audio}}" frameborder='0' allowfullscreen='' scrolling='no' height='200' style='border:1px solid #EEE; box-sizing:border-box; width:100%;' src="https://www.ivoox.com/player_ej_{{page.audio}}_4_1.html?c1=ff6600"></iframe>
 
   <div class="post-content">
+    {{ page.description }}
     {{ content }}
   </div>
 </div>
