--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -56,6 +56,7 @@ html {
 .sidebar {
   padding: 2rem 1rem;
   color: #4d187a;
+  text-align: center;
 }
 
 .sidebar-footer {
@@ -68,7 +69,7 @@ html {
     left: 0;
     bottom: 0;
     width: 18rem;
-    text-align: left;
+    text-align: center;
   }
 }
 
@@ -79,8 +80,10 @@ html {
 
 /* About section */
 .sidebar-about h1 {
-  margin-top: 0;
-  font-size: 1.5rem;
+  font-size: 2rem;
+  line-height: 1;
+  padding: 0;
+  margin: 0;
 }
 
 .sidebar-logo {
@@ -94,7 +97,8 @@ html {
 }
 .sidebar-nav-item {
   display: block;
-  line-height: 1.75;
+  font-size: 1.5rem;
+  line-height: 1.5;
 }
 a.sidebar-nav-item:hover,
 a.sidebar-nav-item:focus {
@@ -107,7 +111,7 @@ a.sidebar-nav-item:focus {
   margin: .5rem 0;
 }
 .sidebar-nav-item.sidebar-social-item {
-  font-size: .8rem;
+  font-size: 1rem;
 }
 
 /* Sticky sidebar
