--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,8 +6,9 @@ layout: default
   <h1 class="post-title">{{ page.title }}</h1>
   <span class="post-date">{{ page.date | date_to_string }}</span>
 
-  <iframe id="audio_{{page.audio}}" frameborder='0' allowfullscreen='' scrolling='no' height='200' style='box-sizing:border-box; width:100%;' src="https://www.ivoox.com/player_ej_{{page.audio}}_4_1.html?c1=ff6600"></iframe>
-
+  {% if page.audio %}
+    <iframe id="audio_{{page.audio}}" frameborder='0' allowfullscreen='' scrolling='no' height='200' style='box-sizing:border-box; width:100%;' src="https://www.ivoox.com/player_ej_{{page.audio}}_4_1.html?c1=ff6600"></iframe>
+  {% endif %}
   <div class="post-content">
     {{ page.description }}
     {{ content }}
@@ -22,7 +23,7 @@ layout: default
       <li>
         <h3>
           <a href="{{ post.url }}">
-            {{ post.title }}
+            {{ post.title }} →
             <small>{{ post.date | date_to_string }}</small>
           </a>
         </h3>
