--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,9 +17,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{site.baseurl}}public/css/poole.css">
   <link rel="stylesheet" href="{{site.baseurl}}public/css/syntax.css">
-  <link rel="stylesheet" href="{{site.baseurl}}public/css/hyde.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
-
+  <link rel="stylesheet" href="{{site.baseurl}}public/css/ddstyle.css">
+  <link rel="stylesheet" href="{{site.baseurl}}public/css/stars.css">
+  <link href="https://fonts.googleapis.com/css2?family=Kufam:wght@400;700&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet"> 
   <!-- Icons -->
   <link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}public/images/icon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="{{site.baseurl}}public/images/icon/favicon-96x96.png">
