--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="page">
-  <h1 class="page-title">{{ page.title }}</h1>
+<article class="dd-page">
+  <h1 class="dd-page-title">{{ page.title }}</h1>
   {{ content }}
-</div>
+</article>
