--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,14 +1,21 @@
-<nav class="dd-navbar">
+<nav class="dd-navbar-mobile">
+  <a href="{{ site.baseurl }}">
+    <img class="dd-logo" src="{{ site.baseurl }}public/images/logo_circle.png" alt="">
+  </a>
+  <button id="dd-open-button" class="dd-action-button active">menú</button>
+  <button id="dd-close-button" class="dd-action-button">cerrar</button>
+</nav>
+
+<nav id="dd-navbar" class="dd-navbar">
   <ul class="dd-navbar-list">
     {% assign pages_list = site.pages | sort: 'order' | where: "layout", "page" %}
     {% assign logo_index = 2 %}
     {% for node in pages_list %}
-    <li>
-      <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}"
-        href="{{ node.url }}">{{ node.title }}</a>
+    <li class="dd-navbar-item{% if page.url == node.url %} active{% endif %}">
+      <a href="{{ node.url }}">{{ node.title }}</a>
     </li>
     {% if forloop.index == logo_index %}
-    <li>
+    <li class="dd-navbar-item dd-main">
       <a href="{{ site.baseurl }}">
         <img class="dd-logo" src="{{ site.baseurl }}public/images/logo_circle.png" alt="">
       </a>
