--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -113,6 +113,15 @@ strong {
   color: #303030;
 }
 
+button {
+  background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
 
 /* Lists */
 ul, ol, dl {
@@ -229,7 +238,6 @@ blockquote p:last-child {
 
 img {
   display: block;
-  max-width: 100%;
   margin: 0 0 1rem;
   border-radius: 5px;
 }
