--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -162,6 +162,21 @@ img.dd-logo {
   margin: 2em 0;
 }
 
+@media (max-height : 675px) {
+  .dd-header h1 {
+    font-size: 56px;
+    letter-spacing: 10px;
+  }
+
+  .dd-subtitle {
+    font-size: 24px;
+    letter-spacing: 0;
+    line-height: 1.5;
+    padding: 1em 0;
+    width: 75vw;
+  }
+}
+
 @media (min-width : 375px) and (max-width : 667px) {
   .dd-header h1 {
     font-size: 36px;
