Add revista thumbnail

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <article class="dd-page">
-  <h1 class="dd-page-title">{{ page.title }}</h1>
+  <h1 class="dd-page-title">{{ page.title_page }}</h1>
   {{ content }}
 </article>
