--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -13,7 +13,7 @@ body {
   top: 0;
   display: flex;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
 }
 
 .dd-navbar-mobile {
@@ -222,4 +222,118 @@ img.dd-logo {
   .dd-container-page {
     padding: 0 2em;
   }
+}
+
+.dd-revista-image {
+  margin: 2em 0;
+}
+
+.dd-revista-info {
+  text-align: center;
+}
+
+.dd-revista-container {
+  display: flex;
+}
+
+.dd-revista-content {
+  padding: 2em 4em;
+}
+
+.dd-revista-posts {
+  display: flex;
+  margin: 2em 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.book-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  perspective: 400px;
+}
+
+@keyframes initAnimation {
+  0% {
+    transform: rotateY(-9deg);
+  }
+  100% {
+    transform: rotateY(-34deg);
+  }
+}
+
+.book {
+  width: 175px;
+  height: 275px;
+  position: relative;
+  transform-style: preserve-3d;
+  transform: rotateY(-34deg);
+  transition: 1s ease;
+  animation: 1s ease 0s 1 initAnimation;
+}
+
+.book-container:hover .book, 
+.book-container:focus .book {
+  transform: rotateY(-9deg);
+}
+
+.book > :first-child {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: red;
+  width: 175px;
+  height: 275px;
+  transform: translateZ(5px);
+  background-color: #01060f;
+  border-radius: 0 0px 0px 0;
+  box-shadow: 5px 5px 20px #666;
+}
+
+.book::before {
+  position: absolute;
+  content: ' ';
+  background-color: blue;
+  left: 0;
+  top: 2px;
+  width: 8px;
+  height: 271px;
+  transform: translateX(168px) rotateY(90deg);
+  background: linear-gradient(90deg, 
+    #fff 0%,
+    #f9f9f9 5%,
+    #fff 10%,
+    #f9f9f9 15%,
+    #fff 20%,
+    #f9f9f9 25%,
+    #fff 30%,
+    #f9f9f9 35%,
+    #fff 40%,
+    #f9f9f9 45%,
+    #fff 50%,
+    #f9f9f9 55%,
+    #fff 60%,
+    #f9f9f9 65%,
+    #fff 70%,
+    #f9f9f9 75%,
+    #fff 80%,
+    #f9f9f9 85%,
+    #fff 90%,
+    #f9f9f9 95%,
+    #fff 100%
+    );
+}
+
+.book::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: ' ';
+  width: 175px;
+  height: 275px;
+  transform: translateZ(-5px);
+  background-color: #01060f;
+  border-radius: 0 0px 0px 0;
+  box-shadow: -10px 0 50px 10px #666;
 }
