--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -67,7 +67,7 @@ body {
 
 /* No `:visited` state is required by default (browsers will use `a`) */
 a {
-  color: #268bd2;
+  color: #7f21cc;
   text-decoration: none;
 }
 a strong {
@@ -383,7 +383,7 @@ tbody tr:nth-child(odd) th {
   color: #999;
 }
 .related-posts li a:hover {
-  color: #268bd2;
+  color: #7f21cc;
   text-decoration: none;
 }
 .related-posts li a:hover small {
