--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,10 @@ layout: default
 ---
 
 <article class="dd-page">
-  <h1 class="dd-page-title">{{ page.title }}</h1>
-  <span class="post-date">{{ page.date | date_to_string }}</span>
+  <div class="dd-page-title-container">
+    <h1 class="dd-page-title">{{ page.title }}</h1>
+    <span class="post-date dd-page-date">{{ page.date | date_to_string }}</span>
+  </div>
 
   {{ page.description }}
 
