--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -46,8 +46,7 @@ img.dd-logo {
 }
 
 .dd-header {
-  background-color: #1b2735;
-  background-image: url('/public/images/background.jpg');
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   width: 100%;
   height: 100vh;
   text-align: center;
@@ -57,14 +56,13 @@ img.dd-logo {
   align-items: center;
   justify-content: center;
   font-weight: lighter;
-  background-size: cover;
-  background-position: bottom;
-  background-attachment: fixed;
 }
 
 .dd-header::before {
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  opacity: 0.5;
+  background-image: url('/public/images/sparkles-2.gif');
+  background-repeat: repeat;
+  opacity: 0.3;
   position: absolute;
   z-index: 0;
   content: ' ';
@@ -75,7 +73,7 @@ img.dd-logo {
 }
 
 .dd-container {
-  background-image: url('/public/images/background.jpg');
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
   min-height: 100%;
   color: #1b2735;
   display: flex;
@@ -87,7 +85,8 @@ img.dd-logo {
 
 .dd-container::before {
   background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
-  opacity: 0.75;
+  background-image: url('/public/images/sparkles-2.gif');
+  opacity: 0.3;
   position: fixed;
   z-index: 0;
   content: ' ';
@@ -106,6 +105,7 @@ img.dd-logo {
   background-color: white;
   z-index: 1;
   flex-direction: column;
+  border-radius: 10px 10px 0 0;
 }
 
 .dd-page {
@@ -115,12 +115,27 @@ img.dd-logo {
   width: 100%;
 }
 
-.dd-page-title {
-  padding: 2em 0;
+.dd-page-date {
   margin: 0;
+  text-align: center;
+}
+
+.dd-page-title-container {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0 0 1em 0;
+}
+
+.dd-page-title {
+  padding-bottom: 1em;
   text-align: center;
   font-size: 36px;
   text-transform: capitalize;
+}
+
+.dd-page-title-container .dd-page-title {
+  padding: 0;
 }
 
 .dd-header h1 {
@@ -209,7 +224,7 @@ img.dd-logo {
   .dd-navbar-mobile {
     position: fixed;
     display: block;
-    z-index: 3;
+    z-index: 1;
     width: 100vw;
   }
 
@@ -272,10 +287,11 @@ img.dd-logo {
 
 .dd-revista-container {
   display: flex;
+  flex-direction: column;
 }
 
 .dd-revista-content {
-  padding: 2em 4em;
+  padding: 2em 0;
 }
 
 .dd-revista-posts {
