--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 
     <div class="dd-container">
       <div class="dd-container-page">
-        {{ content }}
+        <div class="dd-page-content"></div>
+          {{ content }}
+        </div>
       </div>
     </div>
 
