--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,69 @@
-<header class="dd-header">
+{% assign podcasts = site.posts | where: "categories","podcast" %}
+{% assign podcast = podcasts.first %}
+
+{% assign revistas = site.posts | where: "categories","revista" %}
+{% assign revista = revistas.first %}
+
+{% assign posts = site.posts | where: "categories","blog" %}
+{% assign post = posts.first %}
+
+{% assign noticias = site.posts | where: "categories","noticias" %}
+{% assign noticia = noticias.first %}
+
+{% assign pages_list = site.pages | sort: 'order' | where: "title_page", "beca-ursula" %}
+{% assign becapage = pages_list.first %}
+
+<div class="dd-header">
   <h1 class="dd-title">DROIDS AND DRUIDS</h1>
   <p class="dd-subtitle">donde la fantasía y la ciencia ficción se encuentran</p>
-</header>
+
+  <section class="dd-header--info">
+    <article class="dd-header--box dd-header--box-a1">
+      <h2>📻 Escucha el podcast</h2>
+      {% if podcast.title %}
+        <h3>Último episodio</h3>
+        <p><a href="{{ podcast.url }}">{{ podcast.title }}</a> {{ podcast.description}}</p>
+      {% endif %}
+    </article>
+
+    <article class="dd-header--box dd-header--box-a2">
+      <h2>📰 Descárgate la revista</h2>
+      {% if revista.title %}
+        <h3>Último número</h3>
+        <p><a href="{{ revista.url }}">{{ revista.title }}</a> {{ revista.description}}</p>
+      {% endif %}
+    </article>
+
+    <article class="dd-header--box dd-header--box-a3">
+      <h2>📜 Lee el blog</h2>
+      {% if post.title %}
+        <h3>Último post</h3>
+        <p><a href="{{ post.url }}">{{ post.title }}</a> {{ post.description}}</p>
+      {% endif %}
+    </article>
+
+    <article class="dd-header--box dd-header--box-a4">
+      <h2>📌 Lo más reciente</h2>
+      <h3>Beca Úrsula</h3>
+      <p>¿Tienes un podcast relacionado con la ciencia ficción, la fantasía, o el terror? ¿Te gustaría participar en un intercambio podcastero?</p>
+      <p>Si esto te interesa, aquí puedes conocer más sobre la iniciativa <a href="{{ becapage.url }}">Becas Úrsula</a></p>
+      <h3>Noticias</h3>
+
+      {% if noticia.title %}
+        <p><a href="{{ noticia.url }}">{{ noticia.title }}</a> {{ noticia.description}}</p>
+      {% endif %}
+
+      <h3>Redes sociales</h3>
+
+      <div class="dd-social">
+        <ul>
+          <li><a href="https://twitter.com/DroidsAndDruids">Twitter</a></li>
+          <li><a href="https://instagram.com/DroidsAndDruids">Instagram</a></li>
+          <li><a href="https://www.ivoox.com/podcast-droids-and-druids_sq_f1919150_1.html">iVoox</a></li>
+          <li><a href="https://lektu.com/e/droidsdruids/2399">Lektu</a></li>
+          <li><a href="https://github.com/DroidsAndDruids">GitHub</a></li>
+        </ul>
+      </div>
+    </article>
+  </section>
+</div>
