Link to goodreads

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -62,6 +62,7 @@
           <li><a href="https://instagram.com/DroidsAndDruids">Instagram</a></li>
           <li><a href="https://www.ivoox.com/podcast-droids-and-druids_sq_f1919150_1.html">iVoox</a></li>
           <li><a href="https://lektu.com/e/droidsdruids/2399">Lektu</a></li>
+          <li><a href="https://www.goodreads.com/group/show/1138379-club-de-lectura-de-droids-druids">Goodreads</a></li>
           <li><a href="https://github.com/DroidsAndDruids">GitHub</a></li>
         </ul>
       </div>
