--- a/_layouts/revista.html
+++ b/_layouts/revista.html
@@ -20,7 +20,7 @@ layout: default
         <div class="book">
           <img
             alt="Logo revista"
-            src="{{ site.baseurl }}public/images/{{ page.image }}"
+            src="{{ site.baseurl }}{{ page.image }}"
             />
         </div>
       </a>
