--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -6,7 +6,10 @@ layout: default
   <h1 class="dd-page-title">{{ page.title }}</h1>
 
   {% assign author = page.author.first %}
-  <p class="dd-post--author">por {{ author.name }}</p>
-
+  {% if author.link %}
+    <a href="{{author.link}}" class="dd-post--author">{{ author.name }}</a>
+  {% else %}
+    <p class="dd-post--author">{{ author.name }}</p>
+  {% endif %}
   {{ content }}
 </article>
