--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -186,10 +186,13 @@ img.dd-logo {
 .dd-page-title {
   padding-bottom: 1em;
   text-align: center;
-  font-size: 36px;
-  background-color: #7deae1;
-  margin: -2em 0 2em 0;
-  font-weight: 100;
+  font-size: 56px;
+  margin: .5em 0 1em 0;
+  font-weight: 600;
+  transform: skew(-5deg) rotate(5deg);
+  grid-area: text;
+  color: black;
+  text-shadow: 3px 3px 0 #4ef3dc, -3px -3px 0 #D53A33;
 }
 
 .dd-page-title-container .dd-page-title,
@@ -203,11 +206,14 @@ img.dd-logo {
 }
 
 .dd-header h1 {
-  font-size: 72px;
-  font-weight: 100;
-  color: white;
+  font-size: 82px;
   z-index: 0;
-  letter-spacing: 20px;
+  font-weight: 600;
+  transform: skew(-5deg) rotate(-5deg);
+  grid-area: text;
+  color: white;
+  text-shadow: 3px 3px 3px #4ef3dc, -3px -3px 0 #D53A33;
+  font-weight: 600;
 }
 
 .dd-subtitle {
@@ -270,7 +276,6 @@ and (min-width : 320px)
 and (max-width : 1220px) {
   .dd-header h1 {
     font-size: 28px;
-    letter-spacing: 10px;
   }
 
   .dd-subtitle {
