Añadir link a tienda

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
     </article>
 
     <article class="dd-header--box dd-header--box-a4">
-      <h2>📌 Lo más reciente</h2>
+      <h2>📌 No te pierdas nada</h2>
       <h3>Beca Úrsula</h3>
       <p>¿Tienes un podcast relacionado con la ciencia ficción, la fantasía, o el terror? ¿Te gustaría participar en un intercambio podcastero?</p>
       <p>Si esto te interesa, aquí puedes conocer más sobre la iniciativa <a href="{{ becapage.url }}">Becas Úrsula</a></p>
