--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -65,8 +65,6 @@ img.dd-logo {
 
 .dd-header::before {
   background: radial-gradient(ellipse at bottom, #191631 0%, #15161d 100%);
-  background-image: url('/public/images/sparkles-2.gif');
-  background-repeat: repeat;
   opacity: 0.375;
   position: absolute;
   z-index: 0;
@@ -206,7 +204,7 @@ img.dd-logo {
 }
 
 .dd-header h1 {
-  font-size: 82px;
+  font-size: 4rem;
   z-index: 0;
   font-weight: 600;
   transform: skew(-5deg) rotate(-5deg);
@@ -217,9 +215,9 @@ img.dd-logo {
 }
 
 .dd-subtitle {
-  font-size: 36px;
+  font-size: 1.5rem;
   z-index: 0;
-  letter-spacing: 10px;
+  letter-spacing: 0.5rem;
   line-height: 1.5;
   padding: 1em 0;
   width: 50vw;
@@ -275,7 +273,8 @@ img.dd-logo {
 and (min-width : 320px) 
 and (max-width : 1220px) {
   .dd-header h1 {
-    font-size: 28px;
+    font-size: 4rem;
+    margin: 5rem 0 1rem 0;
   }
 
   .dd-subtitle {
