--- a/public/css/ddstyle.css
+++ b/public/css/ddstyle.css
@@ -14,7 +14,7 @@ body {
   display: flex;
   width: 100%;
   z-index: 1;
-  background-color: #090a0fa6;
+  background-color: #171624;
   margin: 0 auto;
 }
 
@@ -54,7 +54,6 @@ img.dd-logo {
 .dd-header {
   background: radial-gradient(ellipse at bottom, #191631 0%, #15161d 100%);
   width: 100%;
-  min-height: 100vh;
   text-align: center;
   padding: 2em 0;
   display: flex;
@@ -63,21 +62,9 @@ img.dd-logo {
   font-weight: lighter;
 }
 
-.dd-header::before {
-  background: radial-gradient(ellipse at bottom, #191631 0%, #15161d 100%);
-  opacity: 0.375;
-  position: absolute;
-  z-index: 0;
-  content: ' ';
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
-.dd-header--info {
-  width: 90vw;
+.dd-main-section {
   display: grid;
+  margin: 2em 1em;
   grid-gap: 1rem;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr;
@@ -85,43 +72,39 @@ img.dd-logo {
     "a1 a4"
     "a2 a4"
     "a3 a4";
-  padding-top: 4em;
   z-index: 1;
 }
 
-.dd-header--box {
-  border: 1px solid #090a0f;
+.dd-main--box {
   border-radius: 5px;
   padding: 1em 2em;
-  color: white;
-  background-color: #090a0fa6;
+  color: #191631;
   text-align: left;
-  /* box-shadow: 0 0 50px -15px purple; */
 }
 
-.dd-header--box a,
-.dd-header--box a:visited,
-.dd-header--box a:active {
-  color: #4ffff0;
+.dd-main--box a,
+.dd-main--box a:visited,
+.dd-main--box a:active {
+  color: #00c8c0;
 }
 
-.dd-header--box-a1 { grid-area: a1; }
-.dd-header--box-a2 { grid-area: a2; }
-.dd-header--box-a3 { grid-area: a3; }
-.dd-header--box-a4 { grid-area: a4; }
+.dd-main--box-a1 { grid-area: a1; }
+.dd-main--box-a2 { grid-area: a2; }
+.dd-main--box-a3 { grid-area: a3; }
+.dd-main--box-a4 { grid-area: a4; }
 
-.dd-header--box h2 {
-  color: white;
+.dd-main--box h2 {
+  color: #191631;
   font-weight: 200;
 }
 
-.dd-header--box h3 {
-  color: white;
+.dd-main--box h3 {
+  color: #191631;
   font-weight: 800;
 }
 
 .dd-container {
-  background: radial-gradient(ellipse at bottom, #191631 0%, #15161d 100%);
+  /* background: radial-gradient(ellipse at bottom, #191631 0%, #15161d 100%); */
   min-height: 100%;
   color: #1b2735;
   display: flex;
@@ -129,19 +112,6 @@ img.dd-logo {
   background-size: cover;
   background-position: bottom;
   background-attachment: fixed;
-}
-
-.dd-container::before {
-  background: radial-gradient(ellipse at bottom, #191631 0%, #15161d 100%);
-  background-image: url('/public/images/sparkles-2.gif');
-  opacity: 0.375;
-  position: fixed;
-  z-index: 0;
-  content: ' ';
-  top: 0;
-  left: 0;
-  width: 100%;
-  min-height: 100%;
 }
 
 .dd-container-page {
@@ -153,8 +123,6 @@ img.dd-logo {
   background-color: white;
   z-index: 0;
   flex-direction: column;
-  border-radius: 10px 10px 0 0;
-  border: 1px solid #090a0f;
 }
 
 .dd-page {
@@ -205,12 +173,14 @@ img.dd-logo {
 
 .dd-header h1 {
   font-size: 4rem;
+  margin-top: 5rem;
   z-index: 0;
   font-weight: 600;
   transform: skew(-5deg) rotate(-5deg);
   grid-area: text;
   color: white;
   text-shadow: 1px 1px 0 #4ef3dc, -1px -1px 0 #D53A33;
+  max-width: 80vw;
   font-weight: 600;
 }
 
@@ -289,7 +259,7 @@ and (max-width : 1220px) {
     margin-top: 4em;
   }
 
-  .dd-header--info {
+  .dd-main-section {
     width: 85%;
     padding-top: 0;
     grid-template-columns: 1fr;
@@ -307,7 +277,6 @@ and (max-width : 1220px) {
     width: 50vw;
     right: 0;
     padding-top: 128px;
-    background-color: #090a0f;
     z-index: 2;
   }
 
@@ -386,7 +355,7 @@ and (min-width : 680px) {
   .dd-container-page {
     padding: 0 1em;
     width: 100%;
-    margin: 10rem 0;
+    margin: 6rem 0;
     max-width: 70%;
   }
 
