--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
       <li>
         <h3>
           <a href="{{ post.url }}">
-            {{ post.title }} →
+            {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
         </h3>
