--- a/_layouts/revista.html
+++ b/_layouts/revista.html
@@ -42,7 +42,7 @@ layout: default
       <li>
         <h3>
           <a href="{{ post.url }}">
-            {{ post.title }} →
+            {{ post.title }}
             <small>{{ post.date | date_to_string }}</small>
           </a>
         </h3>
