--- a/_includes/header.html
+++ b/_includes/header.html
@@ -74,7 +74,7 @@
   <article class="dd-main--box dd-main--box-a5 dd-terramur">
       <h2>
         <a href="{% post_url noticias/2023-01-07-llega-el-festival-terramur %}">
-          🧚 Terramur 2023 🚀
+          🧚 TERRAMUR 2023 🚀
         </a>
       </h2>
 
